--- a/django_delivery/delivery_app/templates/delivery_app/product_search.html
+++ b/django_delivery/delivery_app/templates/delivery_app/product_search.html
@@ -3,8 +3,12 @@
 {% load static %}
 
 {% block title %}
-    Agregar productos
+    Buscar productos
 {% endblock title %}
+
+{% block header_title %}
+    Buscar productos
+{% endblock header_title %}
 
 {% block main %}
 
@@ -13,7 +17,6 @@
     <table>
         {{ form.as_table }}
     </table>
-    <input type="submit" value="Cargar por API">
+    <input type="submit" value="Buscar">
 </form>
-
 {% endblock main %}
