--- a/django_delivery/delivery_app/templates/delivery_app/global.html
+++ b/django_delivery/delivery_app/templates/delivery_app/global.html
@@ -20,15 +20,19 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href='{% static "delivery_app/css/styles.css" %}' rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="{% url 'inicio'%}">Restaurant App</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="{% url 'inicio'%}">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'agregar_producto'%}">Agregar producto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'agregar_categoria'%}">Agregar categoría</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'agregar_cupon'%}">Agregar Cupón</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'buscar_productos'%}">Buscar Productos</a></li>
                     </ul>
                 </div>
             </div>
@@ -37,18 +41,14 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">One Page Wonder</h1>
-                    <h2 class="masthead-subheading mb-0">Will Rock Your Socks Off</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <h1 class="masthead-heading mb-0">{% block header_title %}Delivery App{% endblock header_title %}</h1>
                 </div>
             </div>
-            <div class="bg-circle-1 bg-circle"></div>
-            <div class="bg-circle-2 bg-circle"></div>
-            <div class="bg-circle-3 bg-circle"></div>
-            <div class="bg-circle-4 bg-circle"></div>
         </header>
-        {% block main %}
-        {% endblock main%}
+        <main class="main-container">
+            {% block main %}
+            {% endblock main%}
+        </main>
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
