--- a/delivery_app/static/delivery_app/css/styles.css
+++ b/delivery_app/static/delivery_app/css/styles.css
@@ -2,6 +2,16 @@
 
 /* CUSTOM CSS */
 
+a {
+  text-decoration: none!important;
+}
+
+.image-fit {
+  width: 100%;
+  height: 100%;
+  object-fit: cover!important;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
@@ -74,7 +84,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #ee0979;
+  --bs-primary: #ee0909;
   --bs-secondary: #ff6a00;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -113,7 +123,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #ee0979;
+  --bs-link-color: #000000;
   --bs-link-hover-color: #be0761;
   --bs-code-color: #ee0979;
   --bs-highlight-bg: #fff3cd;
